improved error handling

--- a/Changes
+++ b/Changes
@@ -1,2 +1,9 @@
-Revision history for {{$name}}
+Revision history for App::wu
+
+0.02    2015-01-09
+        - Added more graceful / helpful error handling
+        - Updated location text
+
+0.01    2014-09-11
+        - Initial build
 
