Transferred ownership to DFARRELL

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for App::wu
 
+0.04    2015-04-22
+        - Changed location capture to command line arg
+        - Changed ownership to DFARRELL
+
 0.02    2015-01-09
         - Added more graceful / helpful error handling
         - Updated location text
